Changement en Version classe de MovingCharactere